SERVER-34714 Optimize $or with all always-false children to $alwaysFalse